--- a/credit_card_fraud_detection.ipynb
+++ b/credit_card_fraud_detection.ipynb
@@ -43,7 +43,7 @@
         "from sklearn.neighbors import KNeighborsClassifier as KNN\n",
         "from sklearn.preprocessing import StandardScaler"
       ],
-      "execution_count": 4,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -56,14 +56,23 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "k2nZvtGH8G-e"
+      },
+      "source": [
+        "**To use this dataset download it [here](https://www.kaggle.com/mlg-ulb/creditcardfraud) and import it into the python notebook!**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "KvFiy46cgUZ3"
       },
       "source": [
-        "df = pd.read_csv(\"https://media.githubusercontent.com/media/f1nn1711/Credit-Card-Fraud-Detection/main/creditcard.csv\")"
+        "df = pd.read_csv(\"creditcard.csv\")"
       ],
-      "execution_count": 5,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -82,12 +91,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ed926d18-2d12-4555-a530-4498edb96d22"
+        "outputId": "1b7a360a-2f9c-46a4-f521-54b865390aff"
       },
       "source": [
         "print(f\"Percent of transactions fraudulant: {round((len(df[df.Class == 1])/len(df))*100,5)}%\")"
       ],
-      "execution_count": 6,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -120,7 +129,7 @@
         "\n",
         "df[\"Amount\"] = scaler.fit_transform(amount_values)"
       ],
-      "execution_count": 7,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -141,7 +150,7 @@
         "X = df.drop([\"Time\",\"Class\"], axis=1).values\n",
         "y = df[\"Class\"].values"
       ],
-      "execution_count": 8,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -170,7 +179,7 @@
         "X_test = X[split_index:]\n",
         "y_test = y[split_index:]"
       ],
-      "execution_count": 9,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -189,13 +198,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IdWZRdq0z111",
-        "outputId": "899c86cf-b146-4040-ef76-df7cffc7b442"
+        "outputId": "4e3c9be0-bb8b-4a7c-fa93-0fdd89a9d16a"
       },
       "source": [
         "logreg_model = LogReg()\n",
         "logreg_model.fit(X_train, y_train)"
       ],
-      "execution_count": 10,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -211,7 +220,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 26
         }
       ]
     },
